2007-04-09  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	* NEWS:
	- Version 0.10.3

2007-04-09  Shaun McCance  <shaunm@gnome.org>

	* tools/gnome-doc-utils.make:
	- Fix error on category code check with --disable-scrollkeeper (#427939)

2007-04-09  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	* NEWS:
	- Version 0.10.2

2007-04-03  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	* doc/gnome-doc-make/Makefile.am:
	* doc/xslt/Makefile.am:
	- Use gawk -W compat whenever $(AWK) is gawk

2007-03-19  Shaun McCance  <shaunm@gnome.org>

	* tools/gnome-doc-utils.make:
	- Don't call scrollkeeper when it's not installed, #410715

2007-03-12  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	* NEWS:
	- Version 0.10.1

2007-03-12  Shaun McCance  <shaunm@gnome.org>

	* autogen.sh:
	- Fix bootstrapping issue, #416933 (Elijah Newren)

2007-03-12  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	* NEWS:
	- Version 0.10.0

2007-02-19  Shaun McCance  <shaunm@gnome.org>

	* autogen.sh:
	- Make ACLOCAL_FLAGS work when srcdir != builddir [#409292]
	- Don't copy gnome-doc-utils.m4, since we don't need to

2007-02-19  Shaun McCance  <shaunm@gnome.org>

	* tools/gnome-doc-utils.make:
	- Use abs_srcdir to remove some relative path stupidity [#409341]

2007-02-19  Shaun McCance  <shaunm@gnome.org>

	* xslt/docbook/omf/db2omf.xsl:
	- Fixed type in error message

	* tools/gnome-doc-utils.make:\
	- Don't unilaterally stick `pwd` onto $(_DOC_OMF_IN) [#169324]

	* tools/gnome-doc-tool.in:
	- Removed an echo I'd left in from testing

2007-01-29  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	* NEWS:
	- Version 0.9.2

2007-01-29  Shaun McCance  <shaunm@gnome.org>

	* xslt/docbook/omf/db2omf.xsl:
	- Do not do SK category code checks if the param is not passed [#402159]

2007-01-26  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	* NEWS:
	- Version 0.9.1

2007-01-26  Shaun McCance  <shaunm@gnome.org>

	* tools/gnome-doc-tool.in: