@@ -1,3 +1,12 @@
+2007-05-08  Shaun McCance  <shaunm@gnome.org>
+
+	* tools/gnome-doc-tool.in:
+	- (backporting fixes from trunk)
+	- Use = instead of == to test equality
+	- Explicitly check for an empty command to avoid shift error
+	- Removed  bsh-only parameter substitutions and function syntax, #436824
+	- Fixed global variable polution that caused directories to be forgotten, #436950
+
 2007-04-09  Shaun McCance  <shaunm@gnome.org>
 
 	* configure.in:
